cmake_minimum_required(VERSION 3.10)

project(ex01)

add_executable(runme.exe main.cpp header_chan.hpp vector_utils.cpp)

set(TARGETS runme.exe)

set_target_properties(
    ${TARGETS}
    PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO)

foreach(T ${TARGETS})
    if (MSVC)
        target_compile_options(${T} PRIVATE /Wall /WX)
    else()
        target_compile_options(${T} PRIVATE -Wall -Wextra)
    endif()
endforeach()
